changement du manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "_comment": "Clés obligatoires: 'manifest_version', 'name' & 'version':",
   
-    "manifest_version": 1,
+    "manifest_version": 3,
     "name": "DTZ",
     "description": "Screen time break extension for autistic people",
     "version": "1.0",
@@ -10,20 +10,8 @@
     "_comment1": "Boutons qui s'ajouttent à la barre d'outils du navigateur",
   
     "action": {
-      "default_popup": "index.html",
-      "default_icon": "DTZ_extension.png"
+      "default_popup": "index.html"
     },
-    "_comment2": "Déclarer le script de contenu",
+    "_comment2": "Déclarer le script de contenu"
     
-    "content_scripts": [
-      {
-        "js": [
-          "scripts/content.js"
-        ],
-        "matches": [
-          "https://developer.chrome.com/docs/extensions/*",
-          "https://developer.chrome.com/docs/webstore/*"
-        ]
-      }
-    ]
-  }
+}
