Essai timer background avec countdown

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       {
         "matches": ["http://*/*", "https://*/*"],
         "js": [
-          "app.js"
+          "popup.js"
         ]
       }  
     ],
