--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,29 @@
 {
-    "_comment": "Clés obligatoires: 'manifest_version', 'name' & 'version':",
-  
-    "manifest_version": 3,
-    "name": "DTZ",
-    "description": "Screen time break extension for autistic people",
-    "version": "1.0",
-    "authors": "Domitille Bonnemain, Zoé Lecaille, Tijana Laporte Mitrovic",
-  
-    "_comment1": "Boutons qui s'ajouttent à la barre d'outils du navigateur",
-  
-    "action": {
-      "default_popup": "index.html"
-    },
-    "_comment2": "Déclarer le script de contenu",
+  "manifest_version": 3,
+  "name": "DTZ",
+  "description": "Screen time break extension for autistic people",
+  "version": "1.0",
+  "authors": "Domitille Bonnemain, Zoé Lecaille, Tijana Laporte Mitrovic",
 
-    "content_scripts": [
-      {
-        "matches": ["http://*/*", "https://*/*"],
-        "js": [
-          "popup.js"
-        ]
-      }  
-    ],
+  "action": {
+    "default_popup": "index.html"
+  },
 
-    "_comment3": "Page d'arrière plan",
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["popup.js"]
+    }  
+  ],
 
-    "background" : {
-      "service_worker" : "background.js"
-      
-    }
-    
+  "background": {
+    "service_worker": "background.js"
+  },
+
+  "web_accessible_resources": [
+    "popup.css"
+  ]
+
+
+  
 }
