--- a/manifest.json
+++ b/manifest.json
@@ -3,27 +3,29 @@
   "name": "DTZ",
   "description": "Screen time break extension for autistic people",
   "version": "1.0",
-  "authors": "Domitille Bonnemain, Zoé Lecaille, Tijana Laporte Mitrovic",
-
+  "authors": ["Domitille Bonnemain", "Zoé Lecaille", "Tijana Laporte Mitrovic"],
+  
   "action": {
     "default_popup": "index.html"
   },
-
-  "content_scripts": [
-    {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["popup.js"]
-    }  
-  ],
 
   "background": {
     "service_worker": "background.js"
   },
 
+  "permissions": ["storage", "declarativeContent", "activeTab", "scripting", "tabs"],
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
+
   "web_accessible_resources": [
-    "popup.css"
+    {
+      "resources": ["popup.css"],
+      "matches": ["<all_urls>"]
+    }
   ]
-
-
-  
 }
